// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text editor Line builds the expected component 1`] = `
<span
  className="text align-0"
  data-indent={0}
  dummy="dummyData"
/>
`;

exports[`Text editor Node builds the expected component 1`] = `
<div
  className="component"
>
  <div
    className="text-chunk obojobo-draft--chunks--single-text pad"
  />
</div>
`;

exports[`Text editor oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {},
  },
  "key": "mockKey",
  "nodes": Array [
    Object {
      "data": Object {
        "align": undefined,
        "indent": 1,
      },
      "nodes": Array [
        Object {
          "leaves": undefined,
          "object": "text",
        },
      ],
      "object": "block",
      "type": "ObojoboDraft.Chunks.Text.TextLine",
    },
    Object {
      "data": Object {
        "align": 0,
        "indent": 0,
      },
      "nodes": Array [
        Object {
          "leaves": undefined,
          "object": "text",
        },
      ],
      "object": "block",
      "type": "ObojoboDraft.Chunks.Text.TextLine",
    },
  ],
  "object": "block",
  "type": "mockType",
}
`;

exports[`Text editor plugins.renderNode renders a line when passed 1`] = `
<Line
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.Text.TextLine",
    }
  }
/>
`;

exports[`Text editor plugins.renderNode renders code when passed 1`] = `
<Node
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.Text",
    }
  }
/>
`;

exports[`Text editor plugins.renderPlaceholder exits when not relevent 1`] = `undefined`;

exports[`Text editor plugins.renderPlaceholder exits when not relevent 2`] = `undefined`;

exports[`Text editor plugins.renderPlaceholder exits when not relevent 3`] = `undefined`;

exports[`Text editor plugins.renderPlaceholder renders a placeholder 1`] = `
<span
  className="placeholder align-left"
  contentEditable={false}
>
  Type Your Text Here
</span>
`;

exports[`Text editor slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "textGroup": Array [
      Object {
        "data": Object {
          "align": Object {},
          "indent": Object {},
        },
        "text": Object {
          "styleList": Array [],
          "value": "mockCode",
        },
      },
    ],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
